# todo-rust

./: .env  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/db/: mod.rs  models.rs  schema.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/src/: lib.rs
migrations/2020-03-15-092058_task/: up.sql
src/: lib.rs
