[package]
name = "frontend"
version = "0.1.0"
authors = ["winsan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
mytodo = { path = ".." }
futures = "^0.3.4"
serde = { version="^1.0.85", features = ['derive'] }
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"